--- a/Sales/templates/Sales/top_sellers.html
+++ b/Sales/templates/Sales/top_sellers.html
@@ -69,7 +69,7 @@
     <a href="{% url 'Sales:daliy' %}" class="px-4 py-2 rounded-lg text-indigo-600 hover:bg-indigo-200">Daily</a>
     <a href="{% url 'Sales:monthly' %}" class="px-4 py-2 rounded-lg text-indigo-600 hover:bg-indigo-200">Monthly</a>
     <a href="{% url 'Sales:products' %}" class="px-4 py-2 rounded-lg text-indigo-600 hover:bg-indigo-200">Products</a>
-    <a href="#" class="px-4 py-2 rounded-lg bg-indigo-600 text-white">Top Sellers</a>
+    <a href="{% url 'Sales:top_sellers' %}" class="px-4 py-2 rounded-lg bg-indigo-600 text-white">Top Sellers</a>
     <a href="{% url 'Sales:customers' %}" class="px-4 py-2 rounded-lg text-indigo-600 hover:bg-indigo-200">Customers</a>
   </nav>
 
