--- a/Retail/templates/Retail/dashboard.html
+++ b/Retail/templates/Retail/dashboard.html
@@ -49,9 +49,13 @@
         </div>
         <div class="flex items-center space-x-4">
           <button class="text-gray-600 hover:text-indigo-600"><i class="fa-solid fa-bell text-lg"></i></button>
-          <button class="text-gray-600 hover:text-indigo-600"><i href="{% url 'authu:settings' %}" class="fa-solid fa-gear text-lg"></i></button>
+          <a href="{% url 'authu:settings' %}" class="text-gray-600 hover:text-indigo-600">
+            <i class="fa-solid fa-gear text-lg"></i>
+          </a>
           <span class="hidden sm:inline text-gray-600">Hi, <b>{{ request.user.username }}</b></span>
-          <img src="https://ui-avatars.com/api/?name={{ request.user.username }}" class="w-10 h-10 rounded-full shadow" alt="User Avatar">
+          <a href="{% url 'authu:user_profile' %}">
+            <img src="https://ui-avatars.com/api/?name={{ request.user.username }}" class="w-10 h-10 rounded-full shadow cursor-pointer" alt="User Avatar">
+          </a>
         </div>
       </header>
 
