--- a/authu/templates/authu/user_profile.html
+++ b/authu/templates/authu/user_profile.html
@@ -33,7 +33,7 @@
         </div>
         <div>
             <span style="color:white;">Welcome, {{ request.user.username }}</span>
-            <a href="{% url 'logout' %}">Logout</a>
+            <a href="{% url 'authu:login' %}">Logout</a>
         </div>
     </div>
 
