--- a/Order/templates/Order/order_create.html
+++ b/Order/templates/Order/order_create.html
@@ -6,6 +6,7 @@
 <title>New Order - Retail POS</title>
 <script src="https://unpkg.com/html5-qrcode"></script>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <style>
   * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Roboto', sans-serif; }
 
@@ -274,7 +275,7 @@ function onScanSuccess(decodedText, decodedResult) {
       // Resume scanning after 1 second
       setTimeout(() => {
         scanner.resume();
-      }, 1000);
+      }, 2000);
     });
 }
 
@@ -346,11 +347,25 @@ row.querySelector(".remove-item").addEventListener("click", function () {
       // Checkout modal
       // ----------------------
       function openCheckout() {
-        document.getElementById("orderDate").value = new Date()
-          .toISOString()
-          .split("T")[0];
-        document.getElementById("checkoutModal").style.display = "flex";
-      }
+  const orderItems = document.querySelectorAll("#order-items tr");
+  
+  if (orderItems.length === 0) {
+    Swal.fire({
+      icon: 'warning',
+      title: 'Cart is Empty',
+      text: 'Please scan or add a product before checkout.',
+      confirmButtonColor: '#3085d6',
+      confirmButtonText: 'OK'
+    });
+    return; // Stop here if no products
+  }
+
+  document.getElementById("orderDate").value = new Date()
+    .toISOString()
+    .split("T")[0];
+  document.getElementById("checkoutModal").style.display = "flex";
+}
+
       function closeCheckout() {
         document.getElementById("checkoutModal").style.display = "none";
       }
